fixed scrollbar complelty, changed layout of dashboard

--- a/webapp/wrench-monkey/src/components/custom-scrollbar.css
+++ b/webapp/wrench-monkey/src/components/custom-scrollbar.css
@@ -1,15 +1,17 @@
 .custom-scrollbar {
     @apply overflow-y-auto;
+    padding-right: 10px;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
-    width: 10px;
+    width: 15px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #888;
+    background-color: #374151;
+    border-radius: 10px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #111827;
 }
